--- a/Project Home Page OLD.html
+++ b/Project Home Page OLD.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Project Home Page</title>
+	<title>Project Home Page OLD</title>
 	<meta charset="utf-8">
 	<style>
 		body {
